--- a/static_devconnect/styles/feed.css
+++ b/static_devconnect/styles/feed.css
@@ -1,5 +1,5 @@
   main {
-    /* background-color: rgb(87, 38, 38); */
+    /*background-color: var(--cor-branco-gelo);*/
     min-height: 100vh;
     width: 100%;
 
@@ -8,11 +8,11 @@
     margin-top: 20px;           
   }
   
+
   .container-flex-publi {
     background-color: var(--cor-branco);
     width: 90%;
     max-width: 900px;
-    height: 700px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -69,7 +69,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding: 10px;
+    padding: 3%;
     border: 1px solid var(--cor-azul-escuro);
   }
 
@@ -87,7 +87,127 @@
     padding: 10px;
     color: var(--cor-preto);
     font-size: var(--tamanho-fonte-sm);
+    border: var(--borda);
+
   }
+
+  #cadastro-publi > form > textarea::placeholder {
+    color: var(--cor-azul-escuro);
+  }
+
+  #cadastro-publi > form > footer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 15px;
+    flex-wrap: wrap;
+    margin-top: 30px;
+  }
+
+  .formulario-botao-azul {
+    width: 100%;
+    max-width: 135px;
+  }
+
+  .formulario-botao-azul {
+    background-color: var(--cor-roxo-escuro);
+    border-radius: var(--borda-aredondada);
+    border: none;
+    height: 35px;
+
+    color: var(--cor-branco);
+    font-size: var(--tamanho-fonte-sm);
+    font-weight: 500;
+}
+
+/* secao publicacoes */
+#publicacoes{
+  background-color: blueviolet;
+  width: 100%;
+  height: 600px;
+}
+
+.card-publi {
+  width: 100%;
+  /*height: 400px;*/
+  background-color: var(--cor-branco);
+}
+
+.card-publi > header{
+  display: flex;
+  align-items: center;
+  padding: 3%;
+  border: 1px solid var(--cor-azul-escuro);
+}
+
+.card-publi > header > a {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+  text-decoration:none ;
+  color: var(--cor-preto);
+  font-weight: 500;
+}
+
+.card-publi > figure { 
+  width: 100%;
+  background-color: brown;
+  display: flex;
+  flex-direction: column;
+}
+
+.imagem-publi {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 400px;
+}
+
+.descricao-publicacao{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: var(--tamanho-fonte-md);
+  font-weight: 700;
+  padding: 0 3%;
+  order: 2;
+}
+
+.descricao-publicacao > p {
+  font-size: var(--tamanho-fonte-sm);
+  font-weight: 400;
+}
+
+.interacoes-publicacao {
+  background-color: bisque;
+  width: 110px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  order: 1;
+  margin: 0px 3%;
+}
+
+.interacoes-publicacao > button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.interacoes-publicacao > button > img {
+
+}
+
+.interacoes-publicacao > span {
+  font-size: var(--tamanho-fonte-sm);
+  font-weight: 500;
+  color: var(--cor-preto);
+}
+
+  .card-publi > button {
+    margin: 15px 3%;
+  }
+
 
 
 
@@ -108,21 +228,22 @@
 
   input[type="file"] {
     display: none;
-}
+  }
+  
+  .botao-upload {
+    display: inline-block;
+    width: 100%;
+    max-width: 300px;
+    padding: 10px;
+    background: var(--cor-lilas);
+    color: var(--cor-azul-escuro);
+    text-align: center;
+    font-weight: 600;
+    border-radius: var(--borda-aredondada);
+  }
+  
+  .botao-upload:hover {
+    background: var(--cor-branco-gelo);
+  }
 
-.botao-upload {
-    display: flex;
-    justify-content: center;
-    padding: 10px 20px;
-    background: var(--cor-cinza);
-    cursor: pointer;
-    border-radius: 
-}
 
-.botao-upload:hover {
-    background: var(--cor-cinza-escuro2);
-}
-
-.formulario-botao-azul {
-  background-color: var(--cor-roxo-escuro);
-}
