--- a/static_devconnect/styles/global.css
+++ b/static_devconnect/styles/global.css
@@ -27,6 +27,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box; /* o valor total do tamanho do elemento contra tanto com espaços internos e externo e borda*/
+    outline: none;
 }
 
 body{
@@ -102,7 +103,7 @@ input{
     align-items: center;
 }
 
-#foto-perfil{
+.foto-perfil{
     width: 40px;
     height: 40px;
     object-fit: cover; /*Redimensiona a foto*/
@@ -121,5 +122,26 @@ input{
     }
 }
 
+input[type="file"] {
+    display: none;
+  }
+  
+  .botao-upload {
+    display: inline-block;
+    width: 100%;
+    max-width: 300px;
+    min-width: 35px;
+    height: 35px;
+    padding: 5px;
+    background: var(--cor-cinza);
+    color: var(--cor-branco-gelo);
+    text-align: center;
+    font-weight: 600;
+    border-radius: var(--borda-aredondada);
+  }
+  
+  .botao-upload:hover {
+    background: var(--cor-branco-gelo);
+  }
 
 
