--- a/static_devconnect/styles/feed.css
+++ b/static_devconnect/styles/feed.css
@@ -1,5 +1,4 @@
   main {
-    /*background-color: var(--cor-branco-gelo);*/
     min-height: 100vh;
     width: 100%;
 
@@ -20,8 +19,6 @@
 
   #storys{
     background-color: white;
-    /* background-color: rgb(136, 136, 142);
-    width: 100%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -41,7 +38,6 @@
   }
 
   .card-story > a {
-    /* background-color: red; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -122,15 +118,12 @@
 
 /* secao publicacoes */
 #publicacoes{
-  background-color: blueviolet;
   width: 100%;
-  height: 600px;
+  height: 700px;
 }
 
 .card-publi {
   width: 100%;
-  /*height: 400px;*/
-  background-color: var(--cor-branco);
 }
 
 .card-publi > header{
@@ -151,7 +144,6 @@
 
 .card-publi > figure { 
   width: 100%;
-  background-color: brown;
   display: flex;
   flex-direction: column;
 }
@@ -171,6 +163,7 @@
   font-weight: 700;
   padding: 0 3%;
   order: 2;
+  flex-wrap: wrap;
 }
 
 .descricao-publicacao > p {
@@ -179,13 +172,12 @@
 }
 
 .interacoes-publicacao {
-  background-color: bisque;
   width: 110px;
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
   order: 1;
-  margin: 0px 3%;
+  margin: 15px 3%;
 }
 
 .interacoes-publicacao > button {
@@ -206,6 +198,14 @@
 
   .card-publi > button {
     margin: 15px 3%;
+    background-color: transparent;
+    border: none;
+
+    font-size: var(--tamanho-fonte-sm);
+    font-weight: 400;
+    color: var(--cor-cinza);
+
+    cursor: pointer;
   }
 
 
