--- a/static_devconnect/styles/perfil.css
+++ b/static_devconnect/styles/perfil.css
@@ -132,7 +132,7 @@ a {
   
   .ver-comentarios {
     font-size: 12.8px;
-    color: var(--cor-cinza-escuro1);
+    color: var(--cor-cinza);
     text-decoration: none;
   }
   
